--- a/Blog-Frontend/blog-angular/src/app/header/header.component.css
+++ b/Blog-Frontend/blog-angular/src/app/header/header.component.css
@@ -20,3 +20,9 @@
     padding-top: 10px;
     
 }
+.addpost{
+    color: aliceblue;
+    padding-top: 10px;
+    float: right;
+    text-decoration: none;
+}
