Post detail completed

--- a/Blog-Frontend/blog-angular/src/app/post-detail/post-detail.component.html
+++ b/Blog-Frontend/blog-angular/src/app/post-detail/post-detail.component.html
@@ -8,5 +8,5 @@
         {{postPayload|json}}
     </div>
     <div class="username">
-        Posted by {{postPayload.username}}    </div>
+        <p >{{postPayload.userName}}</p>   </div>
 </div>
