added basoc style

--- a/Blog-Frontend/blog-angular/src/app/add-post/add-post.component.html
+++ b/Blog-Frontend/blog-angular/src/app/add-post/add-post.component.html
@@ -1,18 +1,20 @@
 <div class="container">
+    
     <h1 class="text-muted pd-2">Hey, add some content...</h1>
     <hr>
     <form [formGroup]="addPostForm" (ngSubmit)="addPost()">
         <div class="form-group pb-2">
-            <label for="post-title">Title :</label>
-            <input type="text" class="form-control" [formControlName]="'title'" class="post-title" placeholder="Enter title for post !" autofocus required>
+            <label for="post-title" class="mb-2">Title :</label><br>
+            <input type="text" class="form-control ps-2 " [formControlName]="'title'" class="post-title" placeholder="Enter title for post !" autofocus required style="width:500px">
         </div>
-        <div class="post-content form-group pb-2">
+        <div class="post-content form-group pt-4 pb-2">
             <label for="post-body">Body :</label>
             <editor  [init]="{plugin:'link'}" [formControlName]="'body'">               
             </editor>
 
         </div>
-        <div class="form-group pb-1">
-            <button class="btn btn-success" type="submit">Add Post</button></div>
+        <div class="form-group pt-4 pb-1">
+            <button class="btn btn-success align-center" type="submit">Add Post</button></div>
     </form>
+    
 </div>
