--- a/Blog-Frontend/blog-angular/src/app/header/header.component.html
+++ b/Blog-Frontend/blog-angular/src/app/header/header.component.html
@@ -8,7 +8,7 @@
                 </div>
                 <div class=" col-md-3" *ngIf="checklogin()">
                    <a routerLink="/add-post" class="addpost">Add Post</a> 
-                   <a href="" class="addpost" (click)="logout()">Log Out</a>
+                   <a href="" class="addpost" (click)="logout()">Log Out  <i class="fa-solid fa-right-from-bracket"></i> </a>
                 </div>
                 <div class="col-md-3" *ngIf="!checklogin()" >
                     <a routerLink="/register" class="register">Register</a>
@@ -16,5 +16,6 @@
                 </div>
             </div>
         </div>
+       
     </div>
 </div>
